--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!-- Preloader -->
+    <!-- Preloader " -->
     <div id="preloader" class="preloader-content ">
         <div class="loading-window">
             <div class="car">
@@ -28,13 +28,23 @@
                 <div class="strike strike3"></div>
                 <div class="strike strike4"></div>
                 <div class="strike strike5"></div>
+                <div class="car-detail wheel wheel2"></div>
+                <p style="
+                top: 210px;
+                position: absolute;
+                left: 50px;
+                /* width: 108%; */
+                font-size: xxx-large;
+                letter-spacing: 5px;
+                font-family: system-ui;
+            ">Energy TIres</p>
+                <!-- 
                 <div class="car-detail spoiler"></div>
                 <div class="car-detail back"></div>
                 <div class="car-detail center"></div>
                 <div class="car-detail center1"></div>
                 <div class="car-detail front"></div>
-                <div class="car-detail wheel"></div>
-                <div class="car-detail wheel wheel2"></div>
+                <div class="car-detail wheel"></div> -->
             </div>
         </div>
     </div>
@@ -46,29 +56,17 @@
                 <div class="ak-main_header_in">
                     <div class="ak-main-header-left">
                         <a class="ak-site_branding" href="index.html">
-                            <img src="assets/img/logo.svg" alt="...">
+                            <img src="assets/img/logo.png" alt="...">
                         </a>
                     </div>
                     <div class="ak-main-header-center">
                         <div class="ak-nav ak-medium">
                             <ul class="ak-nav_list">
                                 <li class="menu-item-has-children">
-                                    <a href="index.html" class="text-hover-animaiton">Home</a>
-                                    <ul>
-                                        <li>
-                                            <a href="index.html" class="text-hover-animaiton">Main Home</a>
-                                        </li>
-                                        <li>
-                                            <a href="index-two.html" class="text-hover-animaiton">Car Workshop</a>
-                                        </li>
-                                        <li>
-                                            <a href="index-three.html" class="text-hover-animaiton">Auto Repair</a>
-                                        </li>
-
-                                    </ul>
+                                    <a href="index.html" class="text-hover-animaiton">Acceuil</a>
                                 </li>
                                 <li>
-                                    <a href="about.html" class="text-hover-animaiton">About</a>
+                                    <a href="about.html" class="text-hover-animaiton">A propos</a>
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
@@ -85,69 +83,21 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="menu-item-has-children">
-                                    <a href="blog.html" class="text-hover-animaiton">Blog</a>
-                                    <ul>
-                                        <li>
-                                            <a href="blog.html" class="text-hover-animaiton">Blog</a>
-                                        </li>
-                                        <li>
-                                            <a href="blog-single.html" class="text-hover-animaiton">Blog Single</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#" class="text-hover-animaiton nav-pages-item">Pages</a>
-                                    <ul>
-                                        <li>
-                                            <a href="team.html" class="text-hover-animaiton">Team</a>
-                                        </li>
-                                        <li>
-                                            <a href="team-single.html" class="text-hover-animaiton">Team Single</a>
-                                        </li>
-                                        <li>
-                                            <a href="appointment.html" class="text-hover-animaiton">Appointment</a>
-                                        </li>
-                                        <li>
-                                            <a href="pricing.html" class="text-hover-animaiton">pricing</a>
-                                        </li>
-                                        <li>
-                                            <a href="testimonial.html" class="text-hover-animaiton">Testimonial</a>
-                                        </li>
-                                        <li>
-                                            <a href="gallery.html" class="text-hover-animaiton">Gallery </a>
-                                        </li>
-                                        <li>
-                                            <a href="video-gallery.html" class="text-hover-animaiton">Video Gallery </a>
-                                        </li>
-                                        <li>
-                                            <a href="video-gallery.html" class="text-hover-animaiton">Video Gallery </a>
-                                        </li>
-                                        <li>
-                                            <a href="faq.html" class="text-hover-animaiton">Faq</a>
-                                        </li>
-                                        <li>
-                                            <a href="comming.html" class="text-hover-animaiton">Comming Soon</a>
-                                        </li>
-                                        <li>
-                                            <a href="404.html" class="text-hover-animaiton">404 Page</a>
-                                        </li>
-                                    </ul>
-                                </li>
+                                
                                 <li>
-                                    <a href="contact-us.html" class="text-hover-animaiton">Contact</a>
+                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
                                 </li>
                             </ul>
                         </div>
 
                     </div>
                     <div class="ak-main-header-right">
-                        <a href="tel:1-800-915-6271">
+                        <a href="tel:(+212) 05 22 67 48 98">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
                                     <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
                                 </div>
-                                <h6> 1-800-915-6271</h6>
+                                <h6> (+212) 05 22 67 48 98</h6>
                             </div>
                         </a>
                     </div>
@@ -164,24 +114,18 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1 slide-inner">
-                    <img src="assets/img/hero_slider_bg_1.png" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner1.jpg" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
                                 <div class="hero-title">
-                                    <h1 class="hero-main-title" data-swiper-parallax="300">Car Repair &
-                                        Auto</h1>
-                                    <h1 class="hero-main-title-1 style-2" data-swiper-parallax="100">
-                                        Services</h1>
-                                    <p class="mini-title" data-swiper-parallax="400">Our skilled team of certified
-                                        technicians is here to provide
-                                        top-notch car repair and auto services to ensure your vehicle performs at its
-                                        best. Our skilled team of certified technicians.</p>
+                                    <h1 class="hero-main-title" data-swiper-parallax="300">L'excellence en pneumatique</h1>
+                                    <p class="mini-title" data-swiper-parallax="400">Votre référence en pneumatiques, vous garantit performance, sécurité et durabilité. Spécialiste des pneus de qualité, nous vous offrons les meilleures solutions pour tous vos besoins. Roulez en toute confiance avec notre expertise.</p>
                                 </div>
                                 <div class="ak-height-45 ak-height-lg-30"></div>
                                 <div data-swiper-parallax="300">
                                     <a href="appointment.html" class="common-btn">
-                                        APPOINTMENT
+                                        Découvrir
                                     </a>
                                 </div>
                             </div>
@@ -191,22 +135,19 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1 slide-inner">
-                    <img src="assets/img/hero_slider_bg_2.png" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner2.jpg" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
                                 <div class="hero-title">
-                                    <h1 class="hero-main-title " data-swiper-parallax="300">AUTOMOTIVE REPAIR</h1>
-                                    <h1 class="hero-main-title-1 style-2" data-swiper-parallax="100">MAINTENANCE</h1>
-                                    <p class="mini-title" data-swiper-parallax="400">Our skilled team of certified
-                                        technicians is here to provide
-                                        top-notch car repair and auto services to ensure your vehicle performs at its
-                                        best. Our skilled team of certified technicians.</p>
+                                    <h1 class="hero-main-title " data-swiper-parallax="300">L'expertise des lubrifiants</h1>
+                                    <p class="mini-title" data-swiper-parallax="400">Offrez à votre moteur la protection et la performance qu’il mérite avec nos lubrifiants de haute qualité. 
+                                        Conçus pour optimiser la longévité et l’efficacité de votre véhicule, ils garantissent une lubrification optimale pour une conduite en toute sérénité.</p>
                                 </div>
                                 <div class="ak-height-45 ak-height-lg-30"></div>
                                 <div data-swiper-parallax="300">
                                     <a href="appointment.html" class="common-btn">
-                                        APPOINTMENT
+                                        Découvrir
                                     </a>
                                 </div>
                             </div>
@@ -216,47 +157,19 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1  slide-inner">
-                    <img src="assets/img/hero_slider_bg_1.png" class="ak-hero-bg ak-bg object-cover" alt="...">
-                    <div class="container">
-                        <div class="hero-slider-info">
-                            <div class="slider-info">
-                                <div class="hero-title">
-                                    <h1 class="hero-main-title" data-swiper-parallax="300">Car Repair & Auto</h1>
-                                    <h1 class="hero-main-title-1 style-2" data-swiper-parallax="100">Services</h1>
-                                    <p class="mini-title" data-swiper-parallax="400">Our skilled team of certified
-                                        technicians is here to provide
-                                        top-notch car repair and auto services to ensure your vehicle performs at its
-                                        best. Our skilled team of certified technicians.</p>
-                                </div>
-                                <div class="ak-height-45 ak-height-lg-30"></div>
-                                <div data-swiper-parallax="300">
-                                    <a href="appointment.html" class="common-btn">
-                                        APPOINTMENT
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="ak-hero ak-style1 slide-inner">
                     <img src="assets/img/hero_slider_bg_2.png" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
                                 <div class="hero-title">
-                                    <h1 class="hero-main-title " data-swiper-parallax="300">AUTOMOTIVE REPAIR</h1>
-                                    <h1 class="hero-main-title-1 style-2" data-swiper-parallax="100">MAINTENANCE</h1>
-                                    <p class="mini-title" data-swiper-parallax="400">Our skilled team of certified
-                                        technicians is here to provide
-                                        top-notch car repair and auto services to ensure your vehicle performs at its
-                                        best. Our skilled team of certified technicians.</p>
+                                    <h1 class="hero-main-title" data-swiper-parallax="300">Service auto de qualité.</h1>
+                                    <p class="mini-title" data-swiper-parallax="400">Confiez votre véhicule à des experts passionnés qui garantissent un service de réparation et d’entretien de qualité. 
+                                        Grâce à notre savoir-faire et à l’utilisation de technologies modernes, nous assurons performance, sécurité et longévité à votre voiture..</p>
                                 </div>
                                 <div class="ak-height-45 ak-height-lg-30"></div>
                                 <div data-swiper-parallax="300">
                                     <a href="appointment.html" class="common-btn">
-                                        APPOINTMENT
+                                        Découvrir
                                     </a>
                                 </div>
                             </div>
@@ -267,8 +180,8 @@
         </div>
         <div class="ak-swiper-controll-hero-1">
             <div class="ak-swiper-navigation-wrap">
-                <div class="ak-swiper-button-prev">
-                    <div class="hero-swiper-prev">
+                <div class="ak-swiper-button-next">
+                    <div class="hero-swiper-next">
                         <div class="btn-cricle ak-white-bg-1"></div>
                         <div class="btn-arrow">
                             <svg xmlns="http://www.w3.org/2000/svg" width="29" height="41" viewBox="0 0 29 41"
@@ -281,8 +194,8 @@
 
                     </div>
                 </div>
-                <div class="ak-swiper-button-next">
-                    <div class="hero-swiper-next">
+                <div class="ak-swiper-button-prev">
+                    <div class="hero-swiper-prev">
                         <div class="btn-cricle ak-white-bg-1"></div>
                         <div class="btn-arrow ">
                             <svg xmlns="http://www.w3.org/2000/svg" width="29" height="41" viewBox="0 0 29 41"
@@ -298,7 +211,7 @@
         </div>
         <div class="container">
             <div class="hero-contact-info">
-                <a href="tel:(406)555-0120">
+                <a href="mailto:info@energytires.ma">
                     <div class="d-flex align-items-center gap-2">
                         <div class="heartbeat-icon">
                             <svg width="61" height="60" viewBox="0 0 61 60" fill="none"
@@ -329,10 +242,10 @@
                                 </defs>
                             </svg>
                         </div>
-                        <p class="ak-font-18 ak-white-color ak-semi-bold">example@email.com</p>
+                        <p class="ak-font-18 ak-white-color ak-semi-bold">info@energytires.ma</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="https://maps.app.goo.gl/qL8F8GrMhgb9m9Ff6" target="_blank">
                     <div class="d-flex align-items-center gap-2">
                         <div class="heartbeat-icon">
                             <svg width="61" height="60" viewBox="0 0 61 60" fill="none"
@@ -350,7 +263,7 @@
                                     fill="white" />
                             </svg>
                         </div>
-                        <p class="ak-font-18 ak-white-color ak-semi-bold">123 Maple Street Toronto, On, Canada</p>
+                        <p class="ak-font-18 ak-white-color ak-semi-bold">82 Rue Rabia Al Adaouia etg 2,ESC B Casablanca</p>
                     </div>
                 </a>
                 <div class="d-flex align-items-center gap-2">
@@ -390,7 +303,7 @@
                         </svg>
 
                     </div>
-                    <p class="ak-font-18 ak-white-color ak-semi-bold">Sun - Thu: Open 27/7</p>
+                    <p class="ak-font-18 ak-white-color ak-semi-bold">Lundi - Vendredi: 08:30 - 18:30</p>
                 </div>
             </div>
         </div>
@@ -405,7 +318,7 @@
                         fill="white" />
                 </svg>
             </a>
-            <a href="" class="social-icon1">
+            <a href="https://www.linkedin.com/company/energy-tires/?originalSubdomain=ma" class="social-icon1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
                     <g clip-path="url(#clip0_64_135)">
                         <path
@@ -439,7 +352,7 @@
                 </svg>
             </a>
             <div class="social-horizontal"></div>
-            <h6 class="social-link">FOLLOW US</h6>
+            <h6 class="social-link">Suivez Nous</h6>
         </div>
     </section>
     <!-- End Hero -->
