--- a/index.html
+++ b/index.html
@@ -72,14 +72,19 @@
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
-                                            <a href="services.html" class="text-hover-animaiton">Services</a>
+                                            <a href="services.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
                                         </li>
                                         <li>
-                                            <a href="services-two.html" class="text-hover-animaiton">Services Two</a>
+                                            <a href="services-two.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Services
-                                                Single</a>
+                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                        </li>
+                                        <li>
+                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                        </li>
+                                        <li>
+                                            <a href="services-single.html" class="text-hover-animaiton">Formation et conseil Pneumatique et Lubrifiants de moteur</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -434,13 +439,12 @@
                 <div class="choose-us-info" data-aos="fade-up">
                     <div class="ak-section-heading ak-style-1">
                         <div class="background-text">Feature</div>
-                        <h2 class="ak-section-title">Why Choose Us</h2>
-                        <p class="ak-section-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.
-                            Lorem
-                            Ipsum has been the industry's stan. Lorem Ipsum is simply dummy text of the printing and
-                            typesetting
-                            industry. Lorem Ipsum has been the industry's stan.</p>
+                        <h2 class="ak-section-title">Qui Sommes Nous?</h2>
+                        <p class="ak-section-subtitle">
+                            Nous sommes un groupe à forte valeurs spécialisé dans la pneumatique et les lubrifiants de moteur en commercialisant des pneus de marques prestigieuses, ainsi des lubrifiants de qualité supérieure.
+                        </p>
+                        <p class="ak-section-subtitle">Fondé sur des valeurs solides telles que l'innovation, la qualité et la satisfaction de la clientèle, 
+                            Energy Tires s'engage à fournir des produits et des services de première qualité pour répondre à tous les besoins en matière de mobilité.</p>
                     </div>
                     <div class="ak-height-60 ak-height-lg-30"></div>
                     <div class="stroke-heading-text">
