--- a/index.html
+++ b/index.html
@@ -653,8 +653,7 @@
                 <div class="background-text" data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000">
                     Newsletter</div>
                 <div class="footer-heading-email">
-                    <h5 class="email-title">Sign up for our newsletter to get weekly updates on exclusive
-                        offers and discounts!</h5>
+                    <h5 class="email-title">Inscrivez-vous à notre newsletter pour recevoir chaque semaine des mises à jour sur nos offres exclusives et réductions !</h5>
                     <div>
                         <p id="ak-alert-footer"></p>
                         <form class="email-form" method="POST" id="footer-email">
@@ -678,13 +677,12 @@
             <div class="primary-color-border"></div>
             <div class="ak-height-35 ak-height-lg-30"></div>
             <div class="footer-logo">
-                <img src="assets/img/footer-logo.svg" alt="...">
+                <img src="assets/img/logo.png" alt="...">
                 <div class="ak-height-15 ak-height-lg-10"></div>
             </div>
             <div class="footer-content">
                 <div class="footer-info" data-aos="fade-up">
-                    <p class="desp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                        Ipsum has been the industry's stan. Lorem Ipsum is.</p>
+                    <p class="desp">Energy Tires est un groupe à forte valeurs spécialisé dans la pneumatique et les lubrifiants de moteur en commercialisant des pneus de marques prestigieuses, ainsi des lubrifiants de qualité supérieure.</p>
                     <div class="ak-height-35 ak-height-lg-30"></div>
                     <div class="d-flex align-items-center gap-3">
                         <div class="heartbeat-icon">
@@ -692,7 +690,7 @@
                                 <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
                             </a>
                         </div>
-                        <a href="tel:(406)555-0120" class="phone text-hover-animaiton white">(406) 555-0120</a>
+                        <a href="tel:(406)555-0120" class="phone text-hover-animaiton white">(+212) 05 22 67 48 98</a>
                     </div>
                 </div>
                 <div class="footer-menu-one" data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">
@@ -715,7 +713,7 @@
                     </div>
                 </div>
                 <div class="footer-address" data-aos="fade-up" data-aos-delay="150" data-aos-duration="500">
-                    <p class="adress-title">LOCATION & CONTACT</p>
+                    <p class="adress-title">Adresse</p>
                     <a href="#" class="location">
                         <span class="me-1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="19" viewBox="0 0 15 19"
@@ -725,8 +723,7 @@
                                     fill="white" />
                             </svg>
                         </span>
-                        901 N Pitt Str., Suite 170
-                        Alexandria, NY, USA
+                        82 Rue Rabia Al Adaouia etg 2,ESC B Casablanca
                     </a>
                     <a href="mailto:example@email.com" class="email">
                         <span class="me-1">
@@ -754,7 +751,7 @@
                                 </defs>
                             </svg>
                         </span>
-                        example@email.com
+                        info@energytires.ma
                     </a>
                     <p class="date">
                         <span class="me-1">
@@ -789,14 +786,14 @@
                                 </defs>
                             </svg>
                         </span>
-                        Sun - Thu: Open 27/7
+                        Lundi - Vendredi: 08:30 - 18:30
                     </p>
                 </div>
             </div>
             <div class="ak-height-70 ak-height-lg-30"></div>
             <div class="primary-color-border"></div>
             <div class="copy-right">
-                <p class="title  text-hover-animaiton">Copyright 2024, All Right reserved</p>
+                <p class="title  text-hover-animaiton">Copyright 2025, All Right reserved | <a href="https://synaptech.ma/">Synaptech Maroc</a></p>
                 <div class="social-icon">
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
