--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                                 <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
                             </a>
                         </div>
-                        <a href="tel:(406)555-0120" class="phone text-hover-animaiton white">(+212) 05 22 67 48 98</a>
+                        <a href="tel:(406)555-0120" class="phone text-hover-animaiton white">05 22 67 48 98</a>
                     </div>
                 </div>
                 <div class="footer-menu-one" data-aos="fade-up" data-aos-delay="50" data-aos-duration="500">
