--- a/indexlight.html
+++ b/indexlight.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="assets/css/plugins/swiper.min.css" />
     <link rel="stylesheet" href="assets/css/plugins/aos.css" />
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style_dark.css" />
+
+    
 </head>
 
 <body>
