--- a/indexlight.html
+++ b/indexlight.html
@@ -24,7 +24,7 @@
     <!-- Preloader " -->
     <div id="preloader" class="preloader-content ">
         <div class="loading-window">
-            <div class="car">
+            <div class="car text-center">
                 <div class="strike"></div>
                 <div class="strike strike2"></div>
                 <div class="strike strike3"></div>
@@ -34,11 +34,12 @@
                 <p style="
                 top: 210px;
                 position: absolute;
-                left: 50px;
+                left: 25px;
                 /* width: 108%; */
                 font-size: xxx-large;
                 letter-spacing: 5px;
                 font-family: system-ui;
+                line-height: 45px;
             ">Energy TIres</p>
                 <!-- 
                 <div class="car-detail spoiler"></div>
@@ -647,10 +648,10 @@
 
     <!-- Start Footer -->
     <div class="ak-height-125 ak-height-lg-80"></div>
-    <footer class="footer style-1 footer-bg">
+    <footer class="footer style-1 footer-bg" style="background-color: #D2513A !important;">
         <div class="container">
             <div class="ak-height-40 ak-height-lg-60"></div>
-            <div class="footer-email" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+            <!-- <div class="footer-email" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
                 data-aos-offset="0">
                 <div class="background-text" data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000">
                     Newsletter</div>
@@ -674,12 +675,12 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="ak-height-70 ak-height-lg-30"></div>
             <div class="primary-color-border"></div>
             <div class="ak-height-35 ak-height-lg-30"></div>
             <div class="footer-logo">
-                <img src="assets/img/logo.png" alt="...">
+                <img src="assets/img/logo/logo.png" alt="..." style="width: 25%;">
                 <div class="ak-height-15 ak-height-lg-10"></div>
             </div>
             <div class="footer-content">
