--- a/indexlight.html
+++ b/indexlight.html
@@ -122,14 +122,14 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1 slide-inner">
-                    <img src="assets/img/banner1.jpg" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner1.png" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
-                                <div class="hero-title">
+                                <!-- <div class="hero-title">
                                     <h1 class="hero-main-title" data-swiper-parallax="300">L'excellence en pneumatique</h1>
                                     <p class="mini-title" data-swiper-parallax="400">Votre référence en pneumatiques, vous garantit performance, sécurité et durabilité. Spécialiste des pneus de qualité, nous vous offrons les meilleures solutions pour tous vos besoins. Roulez en toute confiance avec notre expertise.</p>
-                                </div>
+                                </div> -->
                                 <div class="ak-height-45 ak-height-lg-30"></div>
                                 <div data-swiper-parallax="300">
                                     <a href="appointment.html" class="common-btn">
@@ -143,15 +143,15 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1 slide-inner">
-                    <img src="assets/img/banner2.jpg" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner2.PNG" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
-                                <div class="hero-title">
+                                <!-- <div class="hero-title">
                                     <h1 class="hero-main-title " data-swiper-parallax="300">L'expertise des lubrifiants</h1>
                                     <p class="mini-title" data-swiper-parallax="400">Offrez à votre moteur la protection et la performance qu’il mérite avec nos lubrifiants de haute qualité. 
                                         Conçus pour optimiser la longévité et l’efficacité de votre véhicule, ils garantissent une lubrification optimale pour une conduite en toute sérénité.</p>
-                                </div>
+                                </div> -->
                                 <div class="ak-height-45 ak-height-lg-30"></div>
                                 <div data-swiper-parallax="300">
                                     <a href="appointment.html" class="common-btn">
@@ -165,15 +165,15 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1  slide-inner">
-                    <img src="assets/img/hero_slider_bg_2.png" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner3.PNG" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
-                                <div class="hero-title">
+                                <!-- <div class="hero-title">
                                     <h1 class="hero-main-title" data-swiper-parallax="300">Service auto de qualité.</h1>
                                     <p class="mini-title" data-swiper-parallax="400">Confiez votre véhicule à des experts passionnés qui garantissent un service de réparation et d’entretien de qualité. 
                                         Grâce à notre savoir-faire et à l’utilisation de technologies modernes, nous assurons performance, sécurité et longévité à votre voiture..</p>
-                                </div>
+                                </div> -->
                                 <div class="ak-height-45 ak-height-lg-30"></div>
                                 <div data-swiper-parallax="300">
                                     <a href="appointment.html" class="common-btn">
