--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Preloader " -->
     <div id="preloader" class="preloader-content ">
         <div class="loading-window">
-            <div class="car">
+             <div class="car text-center">
                 <div class="strike"></div>
                 <div class="strike strike2"></div>
                 <div class="strike strike3"></div>
@@ -33,11 +33,12 @@
                 <p style="
                 top: 210px;
                 position: absolute;
-                left: 50px;
+                left: 25px;
                 /* width: 108%; */
                 font-size: xxx-large;
                 letter-spacing: 5px;
                 font-family: system-ui;
+                line-height: 45px;
             ">Energy TIres</p>
                 <!-- 
                 <div class="car-detail spoiler"></div>
