--- a/indexlight.html
+++ b/indexlight.html
@@ -10,7 +10,7 @@
     <!-- Favicon Icon -->
     <link rel="icon" href="assets/img/favicon.svg" />
     <!-- Site Title -->
-    <title>Car Repair & Auto Services</title>
+    <title>Energy Tires , Tire & Service</title>
     <link rel="stylesheet" href="assets/css/plugins/lightgallery.min.css" />
     <link rel="stylesheet" href="assets/css/plugins/swiper.min.css" />
     <link rel="stylesheet" href="assets/css/plugins/aos.css" />
